--- a/chivasR/src/styles/AuthForm.css
+++ b/chivasR/src/styles/AuthForm.css
@@ -1,11 +1,12 @@
 .auth-page.login-bg {
   background-color: #0c2869; /* Azul principal de ChivasTV */
-  min-height: 1000px;
+   min-height: 100vh; 
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   padding: 0;
+  overflow-y: auto;
 }
 
 .auth-header {
