--- a/chivasR/src/styles/ContentGrid.css
+++ b/chivasR/src/styles/ContentGrid.css
@@ -1,7 +1,7 @@
 .content-grid {
-  max-width: 1200px;
+  max-width: auto;
   margin: auto;
-  padding: 1px 50px;
+  padding: 10px 300px;
   background-color: #0c2869;
 }
 
