--- a/chivasR/src/styles/MainImage.css
+++ b/chivasR/src/styles/MainImage.css
@@ -74,17 +74,18 @@
   font-size: 32px;
   color: white;
   cursor: pointer;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.5);
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  margin: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease;
   user-select: none;
   backdrop-filter: blur(10px);
-  border: 2px solid rgba(255, 255, 255, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0.384);
 }
 
 .arrow:hover {
@@ -95,6 +96,13 @@
 
 .arrow:active {
   transform: scale(0.95);
+}
+
+.arrowImg{
+  width: auto;
+  height: 40px;
+  border-radius: 50%;
+
 }
 
 .dots {
