--- a/chivasR/src/styles/app.css
+++ b/chivasR/src/styles/app.css
@@ -1,12 +1,13 @@
 
-.app {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+.app-container {
+  background-color: #0c2869;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
-.content {
-  display: flex;
-  flex: 1;
+.sticky-wrapper {
+  position: sticky;
+  top: 60px; /* Ajusta según tu Header */
+  z-index: 100;
+  background-color: #0c2869;
 }
-
