--- a/chivasR/src/styles/AuthForm.css
+++ b/chivasR/src/styles/AuthForm.css
@@ -1,11 +1,12 @@
 .auth-page.login-bg {
-  background-color: #0c2869; 
-  min-height: 1000px;
+  background-color: #0c2869;
+  min-height: 100vh;  /* pantalla completa */
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-top: 40px;
+  padding-top: 70px;  /* deja espacio para el header fijo */
+  box-sizing: border-box;
 }
 
 .auth-header {
@@ -36,7 +37,6 @@
 
 .auth-form-container {
   width: 500px;
-  margin-top: 40px;
   margin-bottom: 40px;
   background-color: #e53935; 
   border-radius: 15px;
