--- a/chivasR/src/index.css
+++ b/chivasR/src/index.css
@@ -24,23 +24,23 @@ body {
   min-width: 320px;
   min-height: 100vh;
   display: block;
-  background-color: #002654;
+  background-color: #07266f;
   padding-top: 70px;
 }
 
 /* Enlaces */
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #FFD700;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #FFD700;
 }
 
 /* Títulos */
 h1 {
-  font-size: 3.2em;
+  font-size: 51px;
   line-height: 1.1;
 }
 
@@ -48,8 +48,8 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 9px 19px;
+  font-size: 16px;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -57,7 +57,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #FFD700;
 }
 button:focus,
 button:focus-visible {
@@ -71,7 +71,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #FFD700;
   }
   button {
     background-color: #f9f9f9;
@@ -83,5 +83,5 @@ html, body {
   padding: 0;
   overflow-x: hidden;
   scroll-behavior: auto;
-  background-color: #0c2869;
+  background-color: #07266f;
 }
