--- a/chivasR/src/styles/AuthForm.css
+++ b/chivasR/src/styles/AuthForm.css
@@ -1,5 +1,5 @@
 .auth-page.login-bg {
-  background-color: #0c2869;
+  background-color: #07266f;
   min-height: 100vh;  /* pantalla completa */
   display: flex;
   align-items: center;
@@ -26,7 +26,7 @@
 }
 
 .back-arrow:hover {
-  color: #e53935;
+  color: #ff1e1a;
   transform: translateX(-5px);
 }
 
@@ -38,7 +38,7 @@
 .auth-form-container {
   width: 500px;
   margin-bottom: 40px;
-  background-color: #e53935; 
+  background-color: #ff1e1a; 
   border-radius: 15px;
   padding: 10px 20px 30px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
@@ -96,7 +96,7 @@ select{
   box-sizing: border-box;
   border: 1px solid #ddd;
   border-radius: 5px;
-  background-color: #e53935;
+  background-color: #ff1e1a;
   font-family: 'AntartidaRounded-Bold', sans-serif;
   color: #fff;
   font-size: 16px;
@@ -104,7 +104,7 @@ select{
 
 .auth-form button {
   background-color: #fff;
-  color: #e53935; 
+  color: #ff1e1a; 
   padding: 12px 20px;
   border: none;
   border-radius: 6px;
