--- a/chivasR/src/styles/Footer.css
+++ b/chivasR/src/styles/Footer.css
@@ -1,11 +1,11 @@
 .footer{
     width: 100%;
-    background-color: #e53935;
+    background-color: #ff1e1a;
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 40px 20px;
+    padding: 20px 20px;
     box-sizing: border-box;
     position: sticky;
     top: 0;
@@ -14,6 +14,15 @@
     font-weight: bold;
 }
 
+.logos{
+    width: auto;
+    height: 25px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+
 .linkStyle{
     color:#fff;
+    font-size: 20px;
 }
