--- a/chivasR/src/styles/FilterBar.css
+++ b/chivasR/src/styles/FilterBar.css
@@ -43,7 +43,7 @@
 }
 
 .filter-buttons .active {
-  background-color: #ff1e1a;
+  background-color: #0c2869;
   color: white;
   box-shadow: 0 0 0 2px white;
 }
