--- a/chivasR/src/styles/SeccionesDestacadas.css
+++ b/chivasR/src/styles/SeccionesDestacadas.css
@@ -23,6 +23,11 @@
   padding: 10px;
 }
 
+.titulo-Seccion{
+  margin-left: 20px;
+  font-size: 50px;
+}
+
 .seccion-card:hover {
   background-color: #e53935;
   transform: translateY(-4px);
