--- a/chivasR/src/styles/VideoDetail.css
+++ b/chivasR/src/styles/VideoDetail.css
@@ -189,6 +189,20 @@ body {
   color: white;
 }
 
+input {
+  font-family: 'AntartidaRounded-Bold', sans-serif;
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border: 2px solid #ffffff;
+  border-radius: 6px;
+  font-size: 16px;
+  outline: none;
+  box-sizing: border-box;
+  background-color: transparent;
+  color: #fff;
+}
+
 .btn-go-premium {
   display: inline-block;
   margin-top: 16px;
